--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title> P!nk Landing Page</title>
+    <title> MM - Landing Page</title>
   </head>
   <body>
 
